Project/MusicUI/WebContent/css/musicStyle.css
/* ... */
.row.Reg{
	width:80%;
}

#day,#year{
 	width:60px;
}

#password,#repassword{
	width:40%;
}

#dob-monthSelect{
	width:50%;
}

#submit,#backToHome {
    background: #4b8df9;
    display: inline-block;
    padding: 5px 10px 6px;
    color: #fbf7f7;
    line-height: 1;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: 0 1px 3px #999;
    -webkit-box-shadow: 0 1px 3px #999; 
    box-shadow: 0 1px 3px #999;
    text-shadow: 0 -1px 1px #222;
    border: none;
    position: relative;
    cursor: pointer;
}

@media only screen and (min-width : 320px)
    and (max-width : 480px) {
	.row.Reg{
		width:80%;
	}
	
	.container{
		padding:0;
	}
}
 
/* PageCommon */
body {
	margin:0px;
	padding: 0px;
	font-family: Georgia-serif;
	background-color: #F2EDE7;
}

#slide img, #about-image img{
	min-height: 500px;
}

.clearBoth{
	clear: both;
}

.found-img2:hover .found-text3, .found-img3:hover .found-text3,.slideTextDisp{
	display: none;
}

a.menuHomeLink{
	position: absolute;
    width: 74px;
    height: 75px;
}

a.menuNavLink{
	width: 30px;
    height: 30px;
   	position: absolute;
}

div#about-pg-ready-music a:hover, div#classes-pg-ready-music a:hover, div#musicHome-pg-ready-music a:hover{
    text-decoration: none;
    color:black;
}

div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready-music a {
    text-decoration: none;
    color:black;
}

#expMusicLink:hover #expMusicLinkText {
	border-bottom: 2px solid #7A7E8A;
}

 #about-pg-ready-music span,#classes-pg-ready-music span,#musicHome-pg-ready-music span{
	border-bottom: 2px solid yellow;
}

#ready-music, #about-pg-ready-music,#classes-pg-ready-music,#musicHome-pg-ready-music{
    position: fixed;
    right: 5%;
    z-index: 1;
}

/*About page section*/
.bullet:before {
    content: "\2022"; 
    font-size: 2em;
	vertical-align: middle;
	background-color: none;
}

#menu-icon{
	padding: 0;
	list-style:none;
}

#about-menu{
	padding-top: 2em;
	margin-left: -8%;
}

#about-image img{
	height: 100%;
}

.foundn-img{
	background: url("../Images/music_sprite.png");
    width: 32px;
    height: 33px;
    background-position: -91px -83px;
    border-radius: 10px;
    display: inline-block;
    vertical-align: middle;
}

.foundn-img:hover{
	background-position: -91px -45px;
}

.line{
	height: 1px;
    border-top: 1px solid;
}

#about-content-2{
/* 	padding-top: 40%; */
}

#about-content-3{
	height: 400px;
}

#about-content-4, #about-content-6, #about-content-7, #classes-content-3{
	margin-top: 1em;
}
#about-carousel img{
	width: 100%;
	height: 400px;
}

.found-text2{
	width: 100%;
	padding: 0 20%;
}

.found-img2{
	background : url("../Images/about_sliderZahirhussain.jpg");
	width: 100%;
	height: 400px;
	background-repeat: no-repeat;	
	background-size: 100%;	
}

.found-img3{
	background : url("../Images/about_sliderTwosticks.jpg");
	width: 100%;
	height: 400px;
	background-repeat: no-repeat;
	background-size: 115%;	
}

.found-text2 {
	width: 100%;
	height: 100%;
	background: #FFFF99;
	opacity: 0;
}

.found-img2:hover .found-text2, .found-img3:hover .found-text2 {
	opacity: 0.6;
	text-align: justify;
	color: #000000;
}

.bold{
	font-weight: bold;
}

#about-carousel h2{
	
	color: white ;
	font-size: 300%
}

#about-carousel h3{
	color: #585858 ;
	font-size: 300%
}

#leftCarousel, #rightCarousel{
	height: 400px;
}

.aboutCont5Txt1{
	margin: 0 0 8% 0;
}

.back-top{
	display: inline-block;
	background: url("../Images/music_sprite.png");
    width: 32px;
    height: 33px;
    background-position: -169px -83px;
    border-radius: 10px;
    display: inline-block;
    vertical-align: middle;
}

.back-top:hover{
	background-position: -169px -45px;
}

#about-content-11{
	padding : 0 2%;
	background-color: #F8F8F8;
}

#about-content-6{
	height: 500px;
	background-color: #F0F0F0;
}

.abt-cont6-img-div{
	height: 100%;
	width: 100%;
}

.abt-cont6-img-div img{
	width : 100%;
	height: 100%;
}

.abt-cont6-txt{
	margin-left: 2%;
	background-color: #f5de00;
	height: 100%;
	width: 100%
}


/* ClassList Section */

.classListCont{
	padding:5%;
}

#img{
	height:100%;
	width:100%;
}

.joinMeTxt{
	font-size:60px;
	font-style:normal;
}

.form-control {
    height:50px;
    background-color: #efefef;
    border-color: black;
}

.email input{
	width:124%;
}

.email{
	float:right;
	padding-right:20%;
	padding-top:10%;
}

.frstClm{
	border-bottom:solid 1px #CCCCCC;
}

.secndClm{
	border-bottom:solid 1px #CCCCCC;
	margin-left:3%;
	line-height:2em;
}

.classListCont .rowCntN{
	clear:both;
	display:flex;
}

.rowCnt1 div{
	height:80px;
}

.rowCnt1 .frstClm, .rowCnt1 .secndClm{
	padding-top:15px;
}

.rowCntN .frstClm,.rowCntN .secndClm,header.headerMenuSection{
	padding:20px 0;
}

.rowCnt1 .frstClm{
	font-size:3em;
}

.rowCntN .secndClm{
	font-size:112%;
}

.instList{
	font-size:32px;		
}

.InstTitle{
	color:grey;
	font-size:12px;
}

.titleDesc{
	font-size:30px;
}

.feedback_text{
	font-size: 1em;
    float: left;
    padding: 0.5em;
    font-family:readyFont;
}

.feedback_img{
	background-image: url(../Images/music_sprite.png);
	width: 36px;
    height: 36px;
    background-position-x: -217px;
    background-position-y: -85px;
    background-size: 1000px;
	float: left;
	cursor: pointer;
	margin: 0px 0.5em;
}

.feedback{
	float: right;
}

/* Schedule Section */
.schClassInsTxt{
	text-decoration: underline;
}

#scheduleSection {
	width: 86%;
    margin: 0px 7%;
}

#schHeader {
	width: 100%;
    padding: 1.5em 0px;
	border-bottom: solid 1px #000000;
}

#schHeading {
	font-size: 3em;
    padding: 0.5em 0.1em;
}

#toClassList {
	float: right;
	padding-top: 1em;
	font-family:readyFont;
}

#toClassTxt {
	font-size: 1em;
	float: left;
	padding: 0.5em;
}

#toClassBut {
	background-image: url(../Images/music_sprite.png);
	width: 36px;
    height: 36px;
    background-position-x: -95px;
    background-position-y: -85px;
    background-size: 1000px;
	float: left;
	cursor: pointer;
	cursor: hand;
	margin: 0px 0.5em;
}
/* ... */

